Don't show the 'wallpaper-set-by-message' if the current wallpaper is set by the right click menu of Files App.

Setting wallpaper from right click menu in 'Files' app is a feature that was implemented
in crbug.com/578935. Since 'Files' app is a built-in v1 app in ChromeOS, we should treat
it slightly differently with other third party apps: the wallpaper set by the 'Files' app
should still be syncable and it should not appear in the wallpaper grid in the Wallpaper Picker.
But we should not display the 'wallpaper-set-by-mesage' since it might introduce confusion
as shown in crbug.com/599407.

BUG=599407

Review-Url: https://codereview.chromium.org/1931713002
Cr-Commit-Position: refs/heads/master@{#391098}

Former-commit-id: ddd4b8e014ac5c63e4447a5f6631521bf13819e8